--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -143,7 +143,9 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
         env:
+          TF_VAR_APP_NAME: carot-ui
           TF_VAR_IMAGE_TAG: ${{ github.sha }}
           TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
           TF_VAR_GITHUB_REPO: https://github.com/FarrisIsmati/carot-ui
           TF_VAR_PAT: ${{ secrets.PAT }}
+          TF_VAR_ENVIRONMENT: DEVELOPMENT
