--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"react-dom": "18.2.0",
 		"react-final-form": "^6.5.9",
 		"react-final-form-arrays": "^3.1.4",
+		"react-popper": "^2.3.0",
 		"react-redux": "^8.1.3",
 		"recharts": "^2.9.2",
 		"styled-components": "^6.0.7",
