--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@material-ui/icons": "^4.11.3",
 		"@mui/material": "^5.14.7",
 		"@mui/styled-engine-sc": "^5.14.7",
+		"@react-hook/window-size": "^3.1.1",
 		"@reduxjs/toolkit": "^1.9.7",
 		"@types/d3": "^7.4.3",
 		"@types/node": "20.5.7",
